moodle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
spec:
  selector:
    matchLabels:
      app: moodle
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
      - image: bitnami/moodle:latest
        name: moodle
        ports:
        - containerPort: 80
          name: moodle
        volumeMounts:
        - name: moodle-storage
          mountPath: /bitnami/moodle
      volumes:
      - name: moodle-storage
        persistentVolumeClaim:
          claimName: moodle-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: moodle
